--- a/Validating a JS form/form_validation.html
+++ b/Validating a JS form/form_validation.html
@@ -6,19 +6,23 @@
             {
                 var username = document.getElementById("name");
                 var emailid = document.getElementById("email");
-                username.value == ""
                 if(username.value==""){
-                    alert("enter the name!!")
+                    alert("enter the name, bitch!!")
                     username.focus();
                     return false;
                 }
+                if(email_address.value==""){
+                    alert("Enter the email, idiot")
+                    return false;
+                }
+                return true;
             }
         </script>
         <title>Contact Details</title>
     </head>
     <body>
         <h2>Enter your contact details:</h2> <br>
-        <form id="form1">
+        <form id="form1" onsubmit="return checkdata()">
             <label for="name">Name:</label>
             <input type="text" id="name" name="name">
             <br><br>
